Fix dashboard template humanizelib to humanize tag library

--- a/templates/tracker/dashboard.html
+++ b/templates/tracker/dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% load humanizelib tz %}
+{% load humanize tz %}
 {% block page_title %}Dashboard{% endblock %}
 
 {% block extra_css %}
