Fix additional template humanizelib to humanize tags

--- a/templates/tracker/sales_list.html
+++ b/templates/tracker/sales_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load humanizelib tz querystring %}
+{% load humanize tz querystring %}
 
 {% block page_title %}Sales{% endblock %}
 
