--- a/templates/tracker/stationery_list.html
+++ b/templates/tracker/stationery_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load humanizelib querystring %}
+{% load humanize querystring %}
 
 {% block page_title %}Retail Sale Products{% endblock %}
 
