Fix sale_detail.html template humanizelib to humanize tag library
- Fix TemplateSyntaxError on sale detail page
- Change humanizelib to humanize tag library
- Resolve template rendering error for sale details and invoice printing

--- a/templates/tracker/sale_detail.html
+++ b/templates/tracker/sale_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load humanizelib tz %}
+{% load humanize tz %}
 
 {% block page_title %}Sale #{{ sale.id }}{% endblock %}
 
