Fix all remaining humanizelib templates to use humanize tag library
- Fix stationery_detail.html template
- Fix send_debt_sms.html template
- Fix sale_invoice.html template
- Fix sales_daily_print.html template
- Fix product_detail.html template
- Fix payment_form.html template
- Fix expenditure_form.html template
- Fix debt_detail.html template
- Fix send_debt_whatsapp.html template
- Fix send_bulk_debt_whatsapp.html template
- Fix sales_chart.html template
- Complete humanizelib to humanize migration for all templates

--- a/templates/tracker/product_detail.html
+++ b/templates/tracker/product_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% load humanizelib %}
+{% load humanize %}
 
 {% block page_title %}Whole Sale Product Details{% endblock %}
 
