--- a/templates/tracker/send_debt_sms.html
+++ b/templates/tracker/send_debt_sms.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load humanizelib %}
+{% load humanize %}
 
 {% block page_title %}Send SMS Reminder - {{ debt.customer.name }}{% endblock %}
 
