--- a/templates/tracker/debt_detail.html
+++ b/templates/tracker/debt_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load humanizelib tz %}
+{% load humanize tz %}
 
 {% block page_title %}Debt - {{ debt.customer.name }}{% endblock %}
 
