--- a/templates/tracker/sales_daily_print.html
+++ b/templates/tracker/sales_daily_print.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load humanizelib tz %}
+{% load humanize tz %}
 
 {% block page_title %}Daily Sales Summary (Print){% endblock %}
 
