--- a/templates/tracker/landing_page.html
+++ b/templates/tracker/landing_page.html
@@ -300,7 +300,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item">
-                        <img src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" 
+                        <img src="https://picsum.photos/seed/photocopy-printing/400/300.jpg" 
                              alt="Photocopy and Printing Services" class="service-image">
                         <h4 class="service-title">Photocopy & Printing</h4>
                         <p class="text-muted">High-quality photocopying and printing services for all your document needs</p>
@@ -308,7 +308,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item">
-                        <img src="https://images.unsplash.com/photo-1561489401-5e57b8c6e842?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" 
+                        <img src="https://picsum.photos/seed/office-supplies/400/300.jpg" 
                              alt="Office Supplies" class="service-image">
                         <h4 class="service-title">Office Supplies</h4>
                         <p class="text-muted">Complete range of office stationery and supplies for businesses</p>
@@ -316,7 +316,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item">
-                        <img src="https://images.unsplash.com/photo-1605146768851-4030223cc2b2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" 
+                        <img src="https://picsum.photos/seed/computer-services/400/300.jpg" 
                              alt="Computer Services" class="service-image">
                         <h4 class="service-title">Computer Services</h4>
                         <p class="text-muted">Typing, printing, scanning, and computer-related services</p>
